[package]
name = "serde_test"
version = "1.0.177"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::testing"]
description = "Token De/Serializer for testing De/Serialize implementations"
documentation = "https://docs.rs/serde_test"
edition = "2021"
keywords = ["serde", "serialization", "testing", "dev-dependencies"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/serde-rs/test"
rust-version = "1.56"

[dependencies]
serde = "1.0.69"

[dev-dependencies]
serde = { version = "1", features = ["rc"] }
serde_derive = "1"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
